progress with streams

--- a/src/main/java/org/example/park/operations/todo
+++ b/src/main/java/org/example/park/operations/todo
@@ -4,7 +4,7 @@ filtrarea masinilor care au stat minim 3 ore in parcare
 
 suma masini suma bani
 
-adaugarea unui nou camp de nationalitate in Car
+xxxxx adaugarea unui nou camp de nationalitate in Car
 atunci cand parcurg lista cu stream adaug in campul respectiv tara de provenienta operatiue map
 
 
